hphp/hack/doc/hack-langspec/tests/Expressions/Postfix_Operators/subscripting_2.php.expectf

Fatal error: HH mode: content before <?hh (Line: 1, Char: 2)
syntax error, unexpected T_HH_ERROR, expecting $end in %s/tests/Expressions/Postfix_Operators/subscripting_2.php on line 1